--- a/JavaJPARelationships/src/ua/com/codefire/MainFrame.form
+++ b/JavaJPARelationships/src/ua/com/codefire/MainFrame.form
@@ -132,9 +132,10 @@
         <Component class="javax.swing.JList" name="jlCategories">
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jlCategoriesMouseClicked"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jlCategoriesKeyPressed"/>
           </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Category&gt;"/>
           </AuxValues>
         </Component>
       </SubComponents>
