--- a/JavaJPARelationships/src/ua/com/codefire/MainFrame.form
+++ b/JavaJPARelationships/src/ua/com/codefire/MainFrame.form
@@ -16,6 +16,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Exit"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiExitActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
